<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="country">City</string>

    <string name="blank_fragment_city">Cities</string>
    <string name="blank_fragment_weather">Weather</string>
    <string name="add_city">Add city</string>
    <string name="description">Description</string>
    <string name="visibility">Visibility</string>
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="fact_temp">Actual:</string>
    <string name="feels_like">The actual one feels like:</string>
    <string name="temp_min">Minimum:</string>
    <string name="temp_max">Мaximum:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="speed">Speed:</string>
    <string name="deg">Degree:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
